crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__doctype_with_gt_in_single_hyphen_quoted_systemid.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<!DOCTYPE html PUBLIC 'foo' '>x\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOCTYPE html PUBLIC 'foo' '": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
    Token {
        data: "x",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
