crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__empty_attribute_followed_by_uppercase_attribute.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<h a B=''>\"####)"
---
[
    Token {
        data: "h",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "a": None,
                    "B": Some(
                        (
                            "",
                            Single,
                        ),
                    ),
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
