crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__empty_end_tag_with_following_tag.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"a</><b>c\"#)"
---
[
    Token {
        data: "a",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "</>",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "b",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "c",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "b",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
