crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__void_element_with_permitted_slash_with_attribute.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<br foo='bar'/>\"####)"
---
[
    Token {
        data: "br",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "foo": Some(
                        (
                            "bar",
                            Single,
                        ),
                    ),
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "br",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
